<resources>
    <string name="app_name">listaContato</string>
    <string name="action_settings">Settings</string>
    <string name="inserir_imagem">Inserir Imagem</string>
    <string name="nome">Nome</string>
    <string name="endereco">Endereço</string>
    <string name="telefone">Telefone</string>
    <string name="celular">Celular</string>
    <string name="referencia">Referência</string>
    <string name="salvar">Salvar</string>
    <string name="email">E-mail</string>
    <string name="contato">contato</string>
    <string name="contato_excluido">contato excluído com sucesso</string>
    <string name="validacao_nome">O nome deve ser preenchido</string>
    <string name="alertImagem">Selecione a fonte</string>
    <string name="camera">Camera</string>
    <string name="galeria">Galeria</string>
    <string name="camera_permission">É necessário permitir a utilização da camera!</string>
    <string name="write_external_extorage_permission">É necessário permitir para a utilização da galeria!</string>
    <string name="ok">OK</string>
    <string name="ordenar_az">Ordenar de A - Z</string>
    <string name="ordenar_za">Ordenar de Z - A</string>
</resources>
